--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title></title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-61QKNY7R9C"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-61QKNY7R9C');
+    </script>
 </head>
 <body>
     <button class="button modal-bth-open" type="button">Open</button>
